# Viscii

./: .gitignore  CMakeLists.txt  README.md
cmake/: OpenCVConfig.cmake
include/: AsciiConverter.hpp  ConsoleUtils.hpp
src/: asciiConverter.cpp  consoleUtils_posix.cpp  consoleUtils_windows.cpp  main.cpp
